parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BOOKED
    CONST
    LENGHTERROR
    VARERROR
    WHILE

Grammar

Rule 0     S' -> program
Rule 1     program -> const_block main_proc
Rule 2     const_block -> const const const const const block
Rule 3     block -> procedure block
Rule 4     block -> global block
Rule 5     block -> empty
Rule 6     alt_block -> alt_content alt_block
Rule 7     alt_block -> empty
Rule 8     alt_content -> instruction
Rule 9     alt_content -> assignment
Rule 10    instruction -> function
Rule 11    instruction -> consult SEMICOLON
Rule 12    instruction -> cycle
Rule 13    instruction -> statement
Rule 14    global -> GLOBAL assignment
Rule 15    assignment -> identifier ASSIGN a_content SEMICOLON
Rule 16    assignment -> identifier COMMA identifier ASSIGN a_content COMMA a_content SEMICOLON
Rule 17    function -> type
Rule 18    function -> insert
Rule 19    function -> del
Rule 20    function -> len
Rule 21    function -> neg
Rule 22    function -> t_f
Rule 23    function -> blink
Rule 24    function -> delay
Rule 25    function -> shape
Rule 26    function -> delete
Rule 27    function -> call
Rule 28    type -> TYPE LPARENT identifier RPARENT SEMICOLON
Rule 29    a_content -> RANGE LPARENT INT COMMA value RPARENT
Rule 30    insert -> identifier DOT INSERT LPARENT i_content RPARENT SEMICOLON
Rule 31    del -> identifier DOT DEL LPARENT INT RPARENT SEMICOLON
Rule 32    len -> LEN LPARENT ID RPARENT SEMICOLON
Rule 33    neg -> identifier DOT NEG SEMICOLON
Rule 34    t_f -> identifier DOT tf SEMICOLON
Rule 35    blink -> BLINK LPARENT b_content RPARENT SEMICOLON
Rule 36    delay -> DELAY LPARENT d_content RPARENT SEMICOLON
Rule 37    shape_arg -> SHAPEF
Rule 38    shape_arg -> SHAPEC
Rule 39    shape_arg -> SHAPEA
Rule 40    shape -> identifier DOT shape_arg SEMICOLON
Rule 41    delete -> identifier DOT DELETE LPARENT indice COMMA INT RPARENT SEMICOLON
Rule 42    call -> CALL proc_dec SEMICOLON
Rule 43    cycle -> for
Rule 44    for -> FOR ID IN iterable step LCORCH alt_block RCORCH SEMICOLON
Rule 45    step -> STEP INT
Rule 46    step -> empty
Rule 47    statement -> IF LPARENT iterable relation bif_value RPARENT LCORCH alt_block RCORCH SEMICOLON opt_statement
Rule 48    opt_statement -> ELSE LCORCH alt_block RCORCH SEMICOLON
Rule 49    opt_statement -> empty
Rule 50    procedure -> PROCEDURE proc_dec LCORCH body RCORCH SEMICOLON
Rule 51    proc_dec -> proc_name LPARENT parameter RPARENT
Rule 52    proc_name -> ID
Rule 53    parameter -> proc_param
Rule 54    parameter -> proc_param COMMA parameter
Rule 55    parameter -> empty
Rule 56    proc_param -> ID
Rule 57    body -> BEGIN alt_block END SEMICOLON
Rule 58    main_proc -> MAIN LPARENT RPARENT LCORCH main_body RCORCH SEMICOLON block
Rule 59    main_body -> BEGIN main_block END SEMICOLON
Rule 60    main_block -> instruction main_block
Rule 61    main_block -> empty
Rule 62    arithmetic -> term
Rule 63    arithmetic -> adding_operator term
Rule 64    arithmetic -> arithmetic adding_operator term
Rule 65    term -> factor
Rule 66    term -> term multiplying_operator factor
Rule 67    factor -> INT
Rule 68    factor -> ID
Rule 69    factor -> LPARENT arithmetic RPARENT
Rule 70    const -> TIMER ASSIGN INT SEMICOLON
Rule 71    const -> RANGOTIMER ASSIGN time_mes SEMICOLON
Rule 72    const -> dimension ASSIGN INT SEMICOLON
Rule 73    const -> CUBO ASSIGN INT SEMICOLON
Rule 74    a_content -> value
Rule 75    a_content -> arithmetic
Rule 76    a_content -> list
Rule 77    a_content -> mat
Rule 78    a_content -> 3dmat
Rule 79    a_content -> consult
Rule 80    b_content -> list_consult COMMA INT COMMA time_mes COMMA value
Rule 81    b_content -> list_consult COMMA value
Rule 82    d_content -> empty
Rule 83    d_content -> INT COMMA time_mes
Rule 84    tf -> T
Rule 85    tf -> F
Rule 86    i_content -> INT COMMA value
Rule 87    i_content -> list COMMA INT i_ind
Rule 88    list -> PARENTCL list_term PARENTCR
Rule 89    list -> PARENTCL empty PARENTCR
Rule 90    list_term -> list_value COMMA list_term
Rule 91    list_term -> list_value
Rule 92    list_value -> value
Rule 93    mat -> PARENTCL mat_term PARENTCR
Rule 94    mat_term -> mat_value COMMA mat_term
Rule 95    mat_term -> mat_value
Rule 96    mat_value -> list
Rule 97    3dmat -> PARENTCL 3dmat_term PARENTCR
Rule 98    3dmat_term -> 3dmat_value COMMA 3dmat_term
Rule 99    3dmat_term -> 3dmat_value
Rule 100   3dmat_value -> mat
Rule 101   consult -> list_consult
Rule 102   consult -> mat_consult
Rule 103   consult -> 3dmat_consult
Rule 104   list_consult -> ID lst_consultT
Rule 105   lst_consultT -> PARENTCL indice PARENTCR
Rule 106   lst_consultT -> PARENTCL indice TP indice PARENTCR
Rule 107   mat_consult -> ID mat_consultT
Rule 108   mat_consultT -> PARENTCL indice COMMA indice PARENTCR
Rule 109   mat_consultT -> PARENTCL TP COMMA indice PARENTCR
Rule 110   mat_consultT -> PARENTCL TP PARENTCR lst_consultT
Rule 111   mat_consultT -> PARENTCL indice PARENTCR lst_consultT
Rule 112   3dmat_consult -> ID 3dmat_consultT
Rule 113   3dmat_consultT -> PARENTCL indice COMMA indice COMMA indice PARENTCR
Rule 114   3dmat_consultT -> PARENTCL indice PARENTCR mat_consultT
Rule 115   indice -> INT
Rule 116   indice -> ID
Rule 117   i_ind -> COMMA INT
Rule 118   i_ind -> empty
Rule 119   dimension -> DIMFILAS
Rule 120   dimension -> DIMCOLUMNAS
Rule 121   time_mes -> QUOTES MIL QUOTES
Rule 122   time_mes -> QUOTES MIN QUOTES
Rule 123   time_mes -> QUOTES SEG QUOTES
Rule 124   adding_operator -> PLUS
Rule 125   adding_operator -> MINUS
Rule 126   multiplying_operator -> TIMES
Rule 127   multiplying_operator -> EXP
Rule 128   multiplying_operator -> DIVIDE
Rule 129   multiplying_operator -> DIVENT
Rule 130   multiplying_operator -> MOD
Rule 131   value -> FALSE
Rule 132   value -> TRUE
Rule 133   bif_value -> value
Rule 134   bif_value -> arithmetic
Rule 135   relation -> ASSIGN
Rule 136   relation -> NE
Rule 137   relation -> LT
Rule 138   relation -> GT
Rule 139   relation -> LTE
Rule 140   relation -> GTE
Rule 141   relation -> COMPARE
Rule 142   identifier -> ID
Rule 143   identifier -> consult
Rule 144   iterable -> identifier
Rule 145   iterable -> INT
Rule 146   empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 15 16 70 71 72 73 135
BEGIN                : 57 59
BLINK                : 35
BOOKED               : 
CALL                 : 42
COMMA                : 16 16 29 41 54 80 80 80 81 83 86 87 90 94 98 108 109 113 113 117
COMPARE              : 141
CONST                : 
CUBO                 : 73
DEL                  : 31
DELAY                : 36
DELETE               : 41
DIMCOLUMNAS          : 120
DIMFILAS             : 119
DIVENT               : 129
DIVIDE               : 128
DOT                  : 30 31 33 34 40 41
ELSE                 : 48
END                  : 57 59
EXP                  : 127
F                    : 85
FALSE                : 131
FOR                  : 44
GLOBAL               : 14
GT                   : 138
GTE                  : 140
ID                   : 32 44 52 56 68 104 107 112 116 142
IF                   : 47
IN                   : 44
INSERT               : 30
INT                  : 29 31 41 45 67 70 72 73 80 83 86 87 115 117 145
LCORCH               : 44 47 48 50 58
LEN                  : 32
LENGHTERROR          : 
LPARENT              : 28 29 30 31 32 35 36 41 47 51 58 69
LT                   : 137
LTE                  : 139
MAIN                 : 58
MIL                  : 121
MIN                  : 122
MINUS                : 125
MOD                  : 130
NE                   : 136
NEG                  : 33
PARENTCL             : 88 89 93 97 105 106 108 109 110 111 113 114
PARENTCR             : 88 89 93 97 105 106 108 109 110 111 113 114
PLUS                 : 124
PROCEDURE            : 50
QUOTES               : 121 121 122 122 123 123
RANGE                : 29
RANGOTIMER           : 71
RCORCH               : 44 47 48 50 58
RPARENT              : 28 29 30 31 32 35 36 41 47 51 58 69
SEG                  : 123
SEMICOLON            : 11 15 16 28 30 31 32 33 34 35 36 40 41 42 44 47 48 50 57 58 59 70 71 72 73
SHAPEA               : 39
SHAPEC               : 38
SHAPEF               : 37
STEP                 : 45
T                    : 84
TIMER                : 70
TIMES                : 126
TP                   : 106 109 110
TRUE                 : 132
TYPE                 : 28
VARERROR             : 
WHILE                : 
error                : 

Nonterminals, with rules where they appear

3dmat                : 78
3dmat_consult        : 103
3dmat_consultT       : 112
3dmat_term           : 97 98
3dmat_value          : 98 99
a_content            : 15 16 16
adding_operator      : 63 64
alt_block            : 6 44 47 48 57
alt_content          : 6
arithmetic           : 64 69 75 134
assignment           : 9 14
b_content            : 35
bif_value            : 47
blink                : 23
block                : 2 3 4 58
body                 : 50
call                 : 27
const                : 2 2 2 2 2
const_block          : 1
consult              : 11 79 143
cycle                : 12
d_content            : 36
del                  : 19
delay                : 24
delete               : 26
dimension            : 72
empty                : 5 7 46 49 55 61 82 89 118
factor               : 65 66
for                  : 43
function             : 10
global               : 4
i_content            : 30
i_ind                : 87
identifier           : 15 16 16 28 30 31 33 34 40 41 144
indice               : 41 105 106 106 108 108 109 111 113 113 113 114
insert               : 18
instruction          : 8 60
iterable             : 44 47
len                  : 20
list                 : 76 87 96
list_consult         : 80 81 101
list_term            : 88 90
list_value           : 90 91
lst_consultT         : 104 110 111
main_block           : 59 60
main_body            : 58
main_proc            : 1
mat                  : 77 100
mat_consult          : 102
mat_consultT         : 107 114
mat_term             : 93 94
mat_value            : 94 95
multiplying_operator : 66
neg                  : 21
opt_statement        : 47
parameter            : 51 54
proc_dec             : 42 50
proc_name            : 51
proc_param           : 53 54
procedure            : 3
program              : 0
relation             : 47
shape                : 25
shape_arg            : 40
statement            : 13
step                 : 44
t_f                  : 22
term                 : 62 63 64 66
tf                   : 34
time_mes             : 71 80 83
type                 : 17
value                : 29 74 80 81 86 92 133

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . const_block main_proc
    (2) const_block -> . const const const const const block
    (70) const -> . TIMER ASSIGN INT SEMICOLON
    (71) const -> . RANGOTIMER ASSIGN time_mes SEMICOLON
    (72) const -> . dimension ASSIGN INT SEMICOLON
    (73) const -> . CUBO ASSIGN INT SEMICOLON
    (119) dimension -> . DIMFILAS
    (120) dimension -> . DIMCOLUMNAS

    TIMER           shift and go to state 4
    RANGOTIMER      shift and go to state 5
    CUBO            shift and go to state 7
    DIMFILAS        shift and go to state 8
    DIMCOLUMNAS     shift and go to state 9

    program                        shift and go to state 1
    const_block                    shift and go to state 2
    const                          shift and go to state 3
    dimension                      shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> const_block . main_proc
    (58) main_proc -> . MAIN LPARENT RPARENT LCORCH main_body RCORCH SEMICOLON block

    MAIN            shift and go to state 11

    main_proc                      shift and go to state 10

state 3

    (2) const_block -> const . const const const const block
    (70) const -> . TIMER ASSIGN INT SEMICOLON
    (71) const -> . RANGOTIMER ASSIGN time_mes SEMICOLON
    (72) const -> . dimension ASSIGN INT SEMICOLON
    (73) const -> . CUBO ASSIGN INT SEMICOLON
    (119) dimension -> . DIMFILAS
    (120) dimension -> . DIMCOLUMNAS

    TIMER           shift and go to state 4
    RANGOTIMER      shift and go to state 5
    CUBO            shift and go to state 7
    DIMFILAS        shift and go to state 8
    DIMCOLUMNAS     shift and go to state 9

    const                          shift and go to state 12
    dimension                      shift and go to state 6

state 4

    (70) const -> TIMER . ASSIGN INT SEMICOLON

    ASSIGN          shift and go to state 13


state 5

    (71) const -> RANGOTIMER . ASSIGN time_mes SEMICOLON

    ASSIGN          shift and go to state 14


state 6

    (72) const -> dimension . ASSIGN INT SEMICOLON

    ASSIGN          shift and go to state 15


state 7

    (73) const -> CUBO . ASSIGN INT SEMICOLON

    ASSIGN          shift and go to state 16


state 8

    (119) dimension -> DIMFILAS .

    ASSIGN          reduce using rule 119 (dimension -> DIMFILAS .)


state 9

    (120) dimension -> DIMCOLUMNAS .

    ASSIGN          reduce using rule 120 (dimension -> DIMCOLUMNAS .)


state 10

    (1) program -> const_block main_proc .

    $end            reduce using rule 1 (program -> const_block main_proc .)


state 11

    (58) main_proc -> MAIN . LPARENT RPARENT LCORCH main_body RCORCH SEMICOLON block

    LPARENT         shift and go to state 17


state 12

    (2) const_block -> const const . const const const block
    (70) const -> . TIMER ASSIGN INT SEMICOLON
    (71) const -> . RANGOTIMER ASSIGN time_mes SEMICOLON
    (72) const -> . dimension ASSIGN INT SEMICOLON
    (73) const -> . CUBO ASSIGN INT SEMICOLON
    (119) dimension -> . DIMFILAS
    (120) dimension -> . DIMCOLUMNAS

    TIMER           shift and go to state 4
    RANGOTIMER      shift and go to state 5
    CUBO            shift and go to state 7
    DIMFILAS        shift and go to state 8
    DIMCOLUMNAS     shift and go to state 9

    const                          shift and go to state 18
    dimension                      shift and go to state 6

state 13

    (70) const -> TIMER ASSIGN . INT SEMICOLON

    INT             shift and go to state 19


state 14

    (71) const -> RANGOTIMER ASSIGN . time_mes SEMICOLON
    (121) time_mes -> . QUOTES MIL QUOTES
    (122) time_mes -> . QUOTES MIN QUOTES
    (123) time_mes -> . QUOTES SEG QUOTES

    QUOTES          shift and go to state 21

    time_mes                       shift and go to state 20

state 15

    (72) const -> dimension ASSIGN . INT SEMICOLON

    INT             shift and go to state 22


state 16

    (73) const -> CUBO ASSIGN . INT SEMICOLON

    INT             shift and go to state 23


state 17

    (58) main_proc -> MAIN LPARENT . RPARENT LCORCH main_body RCORCH SEMICOLON block

    RPARENT         shift and go to state 24


state 18

    (2) const_block -> const const const . const const block
    (70) const -> . TIMER ASSIGN INT SEMICOLON
    (71) const -> . RANGOTIMER ASSIGN time_mes SEMICOLON
    (72) const -> . dimension ASSIGN INT SEMICOLON
    (73) const -> . CUBO ASSIGN INT SEMICOLON
    (119) dimension -> . DIMFILAS
    (120) dimension -> . DIMCOLUMNAS

    TIMER           shift and go to state 4
    RANGOTIMER      shift and go to state 5
    CUBO            shift and go to state 7
    DIMFILAS        shift and go to state 8
    DIMCOLUMNAS     shift and go to state 9

    const                          shift and go to state 25
    dimension                      shift and go to state 6

state 19

    (70) const -> TIMER ASSIGN INT . SEMICOLON

    SEMICOLON       shift and go to state 26


state 20

    (71) const -> RANGOTIMER ASSIGN time_mes . SEMICOLON

    SEMICOLON       shift and go to state 27


state 21

    (121) time_mes -> QUOTES . MIL QUOTES
    (122) time_mes -> QUOTES . MIN QUOTES
    (123) time_mes -> QUOTES . SEG QUOTES

    MIL             shift and go to state 28
    MIN             shift and go to state 29
    SEG             shift and go to state 30


state 22

    (72) const -> dimension ASSIGN INT . SEMICOLON

    SEMICOLON       shift and go to state 31


state 23

    (73) const -> CUBO ASSIGN INT . SEMICOLON

    SEMICOLON       shift and go to state 32


state 24

    (58) main_proc -> MAIN LPARENT RPARENT . LCORCH main_body RCORCH SEMICOLON block

    LCORCH          shift and go to state 33


state 25

    (2) const_block -> const const const const . const block
    (70) const -> . TIMER ASSIGN INT SEMICOLON
    (71) const -> . RANGOTIMER ASSIGN time_mes SEMICOLON
    (72) const -> . dimension ASSIGN INT SEMICOLON
    (73) const -> . CUBO ASSIGN INT SEMICOLON
    (119) dimension -> . DIMFILAS
    (120) dimension -> . DIMCOLUMNAS

    TIMER           shift and go to state 4
    RANGOTIMER      shift and go to state 5
    CUBO            shift and go to state 7
    DIMFILAS        shift and go to state 8
    DIMCOLUMNAS     shift and go to state 9

    const                          shift and go to state 34
    dimension                      shift and go to state 6

state 26

    (70) const -> TIMER ASSIGN INT SEMICOLON .

    TIMER           reduce using rule 70 (const -> TIMER ASSIGN INT SEMICOLON .)
    RANGOTIMER      reduce using rule 70 (const -> TIMER ASSIGN INT SEMICOLON .)
    CUBO            reduce using rule 70 (const -> TIMER ASSIGN INT SEMICOLON .)
    DIMFILAS        reduce using rule 70 (const -> TIMER ASSIGN INT SEMICOLON .)
    DIMCOLUMNAS     reduce using rule 70 (const -> TIMER ASSIGN INT SEMICOLON .)
    PROCEDURE       reduce using rule 70 (const -> TIMER ASSIGN INT SEMICOLON .)
    GLOBAL          reduce using rule 70 (const -> TIMER ASSIGN INT SEMICOLON .)
    MAIN            reduce using rule 70 (const -> TIMER ASSIGN INT SEMICOLON .)


state 27

    (71) const -> RANGOTIMER ASSIGN time_mes SEMICOLON .

    TIMER           reduce using rule 71 (const -> RANGOTIMER ASSIGN time_mes SEMICOLON .)
    RANGOTIMER      reduce using rule 71 (const -> RANGOTIMER ASSIGN time_mes SEMICOLON .)
    CUBO            reduce using rule 71 (const -> RANGOTIMER ASSIGN time_mes SEMICOLON .)
    DIMFILAS        reduce using rule 71 (const -> RANGOTIMER ASSIGN time_mes SEMICOLON .)
    DIMCOLUMNAS     reduce using rule 71 (const -> RANGOTIMER ASSIGN time_mes SEMICOLON .)
    PROCEDURE       reduce using rule 71 (const -> RANGOTIMER ASSIGN time_mes SEMICOLON .)
    GLOBAL          reduce using rule 71 (const -> RANGOTIMER ASSIGN time_mes SEMICOLON .)
    MAIN            reduce using rule 71 (const -> RANGOTIMER ASSIGN time_mes SEMICOLON .)


state 28

    (121) time_mes -> QUOTES MIL . QUOTES

    QUOTES          shift and go to state 35


state 29

    (122) time_mes -> QUOTES MIN . QUOTES

    QUOTES          shift and go to state 36


state 30

    (123) time_mes -> QUOTES SEG . QUOTES

    QUOTES          shift and go to state 37


state 31

    (72) const -> dimension ASSIGN INT SEMICOLON .

    TIMER           reduce using rule 72 (const -> dimension ASSIGN INT SEMICOLON .)
    RANGOTIMER      reduce using rule 72 (const -> dimension ASSIGN INT SEMICOLON .)
    CUBO            reduce using rule 72 (const -> dimension ASSIGN INT SEMICOLON .)
    DIMFILAS        reduce using rule 72 (const -> dimension ASSIGN INT SEMICOLON .)
    DIMCOLUMNAS     reduce using rule 72 (const -> dimension ASSIGN INT SEMICOLON .)
    PROCEDURE       reduce using rule 72 (const -> dimension ASSIGN INT SEMICOLON .)
    GLOBAL          reduce using rule 72 (const -> dimension ASSIGN INT SEMICOLON .)
    MAIN            reduce using rule 72 (const -> dimension ASSIGN INT SEMICOLON .)


state 32

    (73) const -> CUBO ASSIGN INT SEMICOLON .

    TIMER           reduce using rule 73 (const -> CUBO ASSIGN INT SEMICOLON .)
    RANGOTIMER      reduce using rule 73 (const -> CUBO ASSIGN INT SEMICOLON .)
    CUBO            reduce using rule 73 (const -> CUBO ASSIGN INT SEMICOLON .)
    DIMFILAS        reduce using rule 73 (const -> CUBO ASSIGN INT SEMICOLON .)
    DIMCOLUMNAS     reduce using rule 73 (const -> CUBO ASSIGN INT SEMICOLON .)
    PROCEDURE       reduce using rule 73 (const -> CUBO ASSIGN INT SEMICOLON .)
    GLOBAL          reduce using rule 73 (const -> CUBO ASSIGN INT SEMICOLON .)
    MAIN            reduce using rule 73 (const -> CUBO ASSIGN INT SEMICOLON .)


state 33

    (58) main_proc -> MAIN LPARENT RPARENT LCORCH . main_body RCORCH SEMICOLON block
    (59) main_body -> . BEGIN main_block END SEMICOLON

    BEGIN           shift and go to state 39

    main_body                      shift and go to state 38

state 34

    (2) const_block -> const const const const const . block
    (3) block -> . procedure block
    (4) block -> . global block
    (5) block -> . empty
    (50) procedure -> . PROCEDURE proc_dec LCORCH body RCORCH SEMICOLON
    (14) global -> . GLOBAL assignment
    (146) empty -> .

    PROCEDURE       shift and go to state 44
    GLOBAL          shift and go to state 45
    MAIN            reduce using rule 146 (empty -> .)

    block                          shift and go to state 40
    procedure                      shift and go to state 41
    global                         shift and go to state 42
    empty                          shift and go to state 43

state 35

    (121) time_mes -> QUOTES MIL QUOTES .

    SEMICOLON       reduce using rule 121 (time_mes -> QUOTES MIL QUOTES .)
    RPARENT         reduce using rule 121 (time_mes -> QUOTES MIL QUOTES .)
    COMMA           reduce using rule 121 (time_mes -> QUOTES MIL QUOTES .)


state 36

    (122) time_mes -> QUOTES MIN QUOTES .

    SEMICOLON       reduce using rule 122 (time_mes -> QUOTES MIN QUOTES .)
    RPARENT         reduce using rule 122 (time_mes -> QUOTES MIN QUOTES .)
    COMMA           reduce using rule 122 (time_mes -> QUOTES MIN QUOTES .)


state 37

    (123) time_mes -> QUOTES SEG QUOTES .

    SEMICOLON       reduce using rule 123 (time_mes -> QUOTES SEG QUOTES .)
    RPARENT         reduce using rule 123 (time_mes -> QUOTES SEG QUOTES .)
    COMMA           reduce using rule 123 (time_mes -> QUOTES SEG QUOTES .)


state 38

    (58) main_proc -> MAIN LPARENT RPARENT LCORCH main_body . RCORCH SEMICOLON block

    RCORCH          shift and go to state 46


state 39

    (59) main_body -> BEGIN . main_block END SEMICOLON
    (60) main_block -> . instruction main_block
    (61) main_block -> . empty
    (10) instruction -> . function
    (11) instruction -> . consult SEMICOLON
    (12) instruction -> . cycle
    (13) instruction -> . statement
    (146) empty -> .
    (17) function -> . type
    (18) function -> . insert
    (19) function -> . del
    (20) function -> . len
    (21) function -> . neg
    (22) function -> . t_f
    (23) function -> . blink
    (24) function -> . delay
    (25) function -> . shape
    (26) function -> . delete
    (27) function -> . call
    (101) consult -> . list_consult
    (102) consult -> . mat_consult
    (103) consult -> . 3dmat_consult
    (43) cycle -> . for
    (47) statement -> . IF LPARENT iterable relation bif_value RPARENT LCORCH alt_block RCORCH SEMICOLON opt_statement
    (28) type -> . TYPE LPARENT identifier RPARENT SEMICOLON
    (30) insert -> . identifier DOT INSERT LPARENT i_content RPARENT SEMICOLON
    (31) del -> . identifier DOT DEL LPARENT INT RPARENT SEMICOLON
    (32) len -> . LEN LPARENT ID RPARENT SEMICOLON
    (33) neg -> . identifier DOT NEG SEMICOLON
    (34) t_f -> . identifier DOT tf SEMICOLON
    (35) blink -> . BLINK LPARENT b_content RPARENT SEMICOLON
    (36) delay -> . DELAY LPARENT d_content RPARENT SEMICOLON
    (40) shape -> . identifier DOT shape_arg SEMICOLON
    (41) delete -> . identifier DOT DELETE LPARENT indice COMMA INT RPARENT SEMICOLON
    (42) call -> . CALL proc_dec SEMICOLON
    (104) list_consult -> . ID lst_consultT
    (107) mat_consult -> . ID mat_consultT
    (112) 3dmat_consult -> . ID 3dmat_consultT
    (44) for -> . FOR ID IN iterable step LCORCH alt_block RCORCH SEMICOLON
    (142) identifier -> . ID
    (143) identifier -> . consult

    END             reduce using rule 146 (empty -> .)
    IF              shift and go to state 69
    TYPE            shift and go to state 70
    LEN             shift and go to state 72
    BLINK           shift and go to state 74
    DELAY           shift and go to state 75
    CALL            shift and go to state 76
    ID              shift and go to state 73
    FOR             shift and go to state 77

    main_block                     shift and go to state 47
    instruction                    shift and go to state 48
    empty                          shift and go to state 49
    function                       shift and go to state 50
    consult                        shift and go to state 51
    cycle                          shift and go to state 52
    statement                      shift and go to state 53
    type                           shift and go to state 54
    insert                         shift and go to state 55
    del                            shift and go to state 56
    len                            shift and go to state 57
    neg                            shift and go to state 58
    t_f                            shift and go to state 59
    blink                          shift and go to state 60
    delay                          shift and go to state 61
    shape                          shift and go to state 62
    delete                         shift and go to state 63
    call                           shift and go to state 64
    list_consult                   shift and go to state 65
    mat_consult                    shift and go to state 66
    3dmat_consult                  shift and go to state 67
    for                            shift and go to state 68
    identifier                     shift and go to state 71

state 40

    (2) const_block -> const const const const const block .

    MAIN            reduce using rule 2 (const_block -> const const const const const block .)


state 41

    (3) block -> procedure . block
    (3) block -> . procedure block
    (4) block -> . global block
    (5) block -> . empty
    (50) procedure -> . PROCEDURE proc_dec LCORCH body RCORCH SEMICOLON
    (14) global -> . GLOBAL assignment
    (146) empty -> .

    PROCEDURE       shift and go to state 44
    GLOBAL          shift and go to state 45
    MAIN            reduce using rule 146 (empty -> .)
    $end            reduce using rule 146 (empty -> .)

    procedure                      shift and go to state 41
    block                          shift and go to state 78
    global                         shift and go to state 42
    empty                          shift and go to state 43

state 42

    (4) block -> global . block
    (3) block -> . procedure block
    (4) block -> . global block
    (5) block -> . empty
    (50) procedure -> . PROCEDURE proc_dec LCORCH body RCORCH SEMICOLON
    (14) global -> . GLOBAL assignment
    (146) empty -> .

    PROCEDURE       shift and go to state 44
    GLOBAL          shift and go to state 45
    MAIN            reduce using rule 146 (empty -> .)
    $end            reduce using rule 146 (empty -> .)

    global                         shift and go to state 42
    block                          shift and go to state 79
    procedure                      shift and go to state 41
    empty                          shift and go to state 43

state 43

    (5) block -> empty .

    MAIN            reduce using rule 5 (block -> empty .)
    $end            reduce using rule 5 (block -> empty .)


state 44

    (50) procedure -> PROCEDURE . proc_dec LCORCH body RCORCH SEMICOLON
    (51) proc_dec -> . proc_name LPARENT parameter RPARENT
    (52) proc_name -> . ID

    ID              shift and go to state 82

    proc_dec                       shift and go to state 80
    proc_name                      shift and go to state 81

state 45

    (14) global -> GLOBAL . assignment
    (15) assignment -> . identifier ASSIGN a_content SEMICOLON
    (16) assignment -> . identifier COMMA identifier ASSIGN a_content COMMA a_content SEMICOLON
    (142) identifier -> . ID
    (143) identifier -> . consult
    (101) consult -> . list_consult
    (102) consult -> . mat_consult
    (103) consult -> . 3dmat_consult
    (104) list_consult -> . ID lst_consultT
    (107) mat_consult -> . ID mat_consultT
    (112) 3dmat_consult -> . ID 3dmat_consultT

    ID              shift and go to state 85

    assignment                     shift and go to state 83
    identifier                     shift and go to state 84
    consult                        shift and go to state 86
    list_consult                   shift and go to state 65
    mat_consult                    shift and go to state 66
    3dmat_consult                  shift and go to state 67

state 46

    (58) main_proc -> MAIN LPARENT RPARENT LCORCH main_body RCORCH . SEMICOLON block

    SEMICOLON       shift and go to state 87


state 47

    (59) main_body -> BEGIN main_block . END SEMICOLON

    END             shift and go to state 88


state 48

    (60) main_block -> instruction . main_block
    (60) main_block -> . instruction main_block
    (61) main_block -> . empty
    (10) instruction -> . function
    (11) instruction -> . consult SEMICOLON
    (12) instruction -> . cycle
    (13) instruction -> . statement
    (146) empty -> .
    (17) function -> . type
    (18) function -> . insert
    (19) function -> . del
    (20) function -> . len
    (21) function -> . neg
    (22) function -> . t_f
    (23) function -> . blink
    (24) function -> . delay
    (25) function -> . shape
    (26) function -> . delete
    (27) function -> . call
    (101) consult -> . list_consult
    (102) consult -> . mat_consult
    (103) consult -> . 3dmat_consult
    (43) cycle -> . for
    (47) statement -> . IF LPARENT iterable relation bif_value RPARENT LCORCH alt_block RCORCH SEMICOLON opt_statement
    (28) type -> . TYPE LPARENT identifier RPARENT SEMICOLON
    (30) insert -> . identifier DOT INSERT LPARENT i_content RPARENT SEMICOLON
    (31) del -> . identifier DOT DEL LPARENT INT RPARENT SEMICOLON
    (32) len -> . LEN LPARENT ID RPARENT SEMICOLON
    (33) neg -> . identifier DOT NEG SEMICOLON
    (34) t_f -> . identifier DOT tf SEMICOLON
    (35) blink -> . BLINK LPARENT b_content RPARENT SEMICOLON
    (36) delay -> . DELAY LPARENT d_content RPARENT SEMICOLON
    (40) shape -> . identifier DOT shape_arg SEMICOLON
    (41) delete -> . identifier DOT DELETE LPARENT indice COMMA INT RPARENT SEMICOLON
    (42) call -> . CALL proc_dec SEMICOLON
    (104) list_consult -> . ID lst_consultT
    (107) mat_consult -> . ID mat_consultT
    (112) 3dmat_consult -> . ID 3dmat_consultT
    (44) for -> . FOR ID IN iterable step LCORCH alt_block RCORCH SEMICOLON
    (142) identifier -> . ID
    (143) identifier -> . consult

    END             reduce using rule 146 (empty -> .)
    IF              shift and go to state 69
    TYPE            shift and go to state 70
    LEN             shift and go to state 72
    BLINK           shift and go to state 74
    DELAY           shift and go to state 75
    CALL            shift and go to state 76
    ID              shift and go to state 73
    FOR             shift and go to state 77

    instruction                    shift and go to state 48
    main_block                     shift and go to state 89
    empty                          shift and go to state 49
    function                       shift and go to state 50
    consult                        shift and go to state 51
    cycle                          shift and go to state 52
    statement                      shift and go to state 53
    type                           shift and go to state 54
    insert                         shift and go to state 55
    del                            shift and go to state 56
    len                            shift and go to state 57
    neg                            shift and go to state 58
    t_f                            shift and go to state 59
    blink                          shift and go to state 60
    delay                          shift and go to state 61
    shape                          shift and go to state 62
    delete                         shift and go to state 63
    call                           shift and go to state 64
    list_consult                   shift and go to state 65
    mat_consult                    shift and go to state 66
    3dmat_consult                  shift and go to state 67
    for                            shift and go to state 68
    identifier                     shift and go to state 71

state 49

    (61) main_block -> empty .

    END             reduce using rule 61 (main_block -> empty .)


state 50

    (10) instruction -> function .

    IF              reduce using rule 10 (instruction -> function .)
    TYPE            reduce using rule 10 (instruction -> function .)
    LEN             reduce using rule 10 (instruction -> function .)
    BLINK           reduce using rule 10 (instruction -> function .)
    DELAY           reduce using rule 10 (instruction -> function .)
    CALL            reduce using rule 10 (instruction -> function .)
    ID              reduce using rule 10 (instruction -> function .)
    FOR             reduce using rule 10 (instruction -> function .)
    END             reduce using rule 10 (instruction -> function .)
    RCORCH          reduce using rule 10 (instruction -> function .)


state 51

    (11) instruction -> consult . SEMICOLON
    (143) identifier -> consult .

    SEMICOLON       shift and go to state 90
    DOT             reduce using rule 143 (identifier -> consult .)
    ASSIGN          reduce using rule 143 (identifier -> consult .)
    COMMA           reduce using rule 143 (identifier -> consult .)


state 52

    (12) instruction -> cycle .

    IF              reduce using rule 12 (instruction -> cycle .)
    TYPE            reduce using rule 12 (instruction -> cycle .)
    LEN             reduce using rule 12 (instruction -> cycle .)
    BLINK           reduce using rule 12 (instruction -> cycle .)
    DELAY           reduce using rule 12 (instruction -> cycle .)
    CALL            reduce using rule 12 (instruction -> cycle .)
    ID              reduce using rule 12 (instruction -> cycle .)
    FOR             reduce using rule 12 (instruction -> cycle .)
    END             reduce using rule 12 (instruction -> cycle .)
    RCORCH          reduce using rule 12 (instruction -> cycle .)


state 53

    (13) instruction -> statement .
